frontend/tests/cases/positive/synInterfaceMixedKindParameters.gr
-- An interface with mixed kind parameters
interface Simple a (b : Coeffect) (c : b) (n : Nat)
