frontend/tests/cases/negative/instanceTooFewParams.gr
interface Simple a b

-- too few parameters (expecting 2)
instance Simple Int
